--- a/css/styles.css
+++ b/css/styles.css
@@ -6,18 +6,33 @@
 body {
   background-color: #f5f4fa;
   color: #757575;
+
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 .logo-header {
   color: #212121;
+
+  text-decoration: none;
+  font-family: Raleway, sans-serif;
 }
 
 .logo-header > .logo-header-front {
   color: #2196f3;
 }
+.nav-links {
+  list-style-type: none;
+}
 
 .nav-links .nav-links-link {
   color: #212121;
+
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .nav-links .nav-links-link:hover,
@@ -25,8 +40,18 @@ body {
   color: var(--accent-color);
 }
 
+.header-adress {
+  list-style-type: none;
+}
+
 .header-adress .header-adress-link {
   color: #757575;
+
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .header-adress .header-adress-link:hover,
@@ -39,25 +64,72 @@ body {
   color: var(--white-text-color);
 }
 
+.order-service > .order-service-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
 .order-service > .order-service-button {
   background-color: #2196f3;
   color: var(--white-text-color);
   cursor: pointer;
+
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+}
+
+.features {
+  list-style-type: none;
 }
 
 .features .features-title {
   color: var(--header-color);
+
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 
-.activities > .activities-title {
-  color: var(--header-color);
+.features .features-text {
+  font-size: 14px;
+  line-height: 1.71;
 }
 
+.activities-images {
+  list-style-type: none;
+}
+
+.activities > .activities-title,
 .team > .team-title {
   color: var(--header-color);
+
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
 }
+
+.team-list {
+  list-style-type: none;
+}
+
 .team .team-subtitle {
   color: var(--header-color);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+}
+
+.team .teaam-text {
+  font-size: 16px;
+  line-height: 1.19;
 }
 
 .footer {
@@ -66,6 +138,12 @@ body {
 
 .footer > .logo-footer {
   color: var(--white-text-color);
+
+  text-decoration: none;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
 .footer .logo-footer-front {
   color: var(--accent-color);
@@ -73,10 +151,17 @@ body {
 
 .address {
   color: var(--white-text-color);
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 .address > .address-link {
   color: rgba(255, 255, 255, 0.6);
+
+  text-decoration: none;
 }
 
 .address > .address-link:hover,
@@ -84,14 +169,23 @@ body {
   color: var(--accent-color);
 }
 
+.portfolio-button-list,
+.portfolio-list {
+  list-style-type: none;
+}
+
 .portfolio .portfolio-button {
   background-color: #f5f4fa;
   color: #212121;
+
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
 }
 
 .portfolio .portfolio-button:hover,
-.portfolio .portfolio-button:focus,
-.portfolio .portfolio-button:active {
+.portfolio .portfolio-button:focus {
   background-color: #2196f3;
   color: var(--white-text-color);
   cursor: pointer;
@@ -99,6 +193,15 @@ body {
 
 .portfolio .portfolio-title {
   color: var(--header-color);
+
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.portfolio .portfolio-text {
+  font-size: 16px;
+  line-height: 1.87;
 }
 /* основной цвет текста color: #212121; */
 
