--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   --white-text-color: #ffffff;
 }
 body {
-  background-color: #f5f4fa;
+  background-color: #ffffff;
   color: #757575;
 
   font-family: Roboto, sans-serif;
@@ -14,6 +14,9 @@ body {
 .logo-header {
   color: #212121;
 
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
   text-decoration: none;
   font-family: Raleway, sans-serif;
 }
@@ -85,6 +88,11 @@ body {
   letter-spacing: 0.06em;
 }
 
+.order-service > .order-service-button:hover,
+.order-service > .order-service-button:focus {
+  color: #188ce8;
+}
+
 .features {
   list-style-type: none;
 }
@@ -113,6 +121,10 @@ body {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+}
+
+.team {
+  background-color: #f5f4fa;
 }
 
 .team-list {
