--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   --white-text-color: #ffffff;
 }
 body {
-  background-color: #ffffff;
+  background: #ffffff;
   color: #757575;
 
   font-family: Roboto, sans-serif;
